Support creating DB instance in Azure
