# api/swagger.json
@@ -2522,6 +2522,10 @@
                     "type": "string",
                     "example": "ap-northeast-2"
                 },
+                "csp_resource_group": {
+                    "type": "string",
+                    "example": "rg-12345678"
+                },
                 "csp_subnet1_id": {
                     "type": "string",
                     "example": "subnet-1234abcd"
@@ -2536,7 +2540,7 @@
                 },
                 "db_admin_password": {
                     "type": "string",
-                    "example": "mysdbpass"
+                    "example": "P@ssword1234!"
                 },
                 "db_admin_username": {
                     "type": "string",
@@ -2550,13 +2554,9 @@
                     "type": "string",
                     "example": "8.0.39"
                 },
-                "db_instance_class": {
+                "db_instance_spec": {
                     "type": "string",
                     "example": "db.t3.micro"
-                },
-                "db_instance_identifier": {
-                    "type": "string",
-                    "example": "mydbinstance"
                 },
                 "egress_cidr_block": {
                     "type": "string",
